--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <script src="user_scripts/IodineGBAGraphicsGlueCode.js"></script>
         <script src="user_scripts/IodineGBAAudioGlueCode.js"></script>
         <script src="user_scripts/IodineGBACoreGlueCode.js"></script>
+        <script src="user_scripts/IodineGBAWorkerGlueCode.js"></script>
         <script src="user_scripts/base64.js"></script>
         <link rel="stylesheet" href="user_css/main.css">
     </head>
